--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.2.0",
+    "react-icons": "^5.2.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -33,6 +33,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "eslint-config-prettier": "^9.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
